syntax = "proto3";
option go_package = "mapd";
package mapd;

service Mapd {
    rpc set (SetRequest) returns (SetReply) {}
    rpc setSafe (SetRequest) returns (SetReply) {}
    rpc get (GetRequest) returns (GetReply) {}
    rpc replicate (Entry) returns (Void) {}
    rpc getDefiProbe (ProbeRequest) returns (ProbeReply) {}
    rpc getRandProbe (Void) returns (ProbeReply) {}
}

message GetRequest {
    string key = 1;
}

message SetRequest {
    string key = 1;
    bytes  value = 2;
}

message GetReply {
    bytes value = 1;
}

message SetReply {
    bool err = 1;
}

message Entry {
    string key = 1;
    int32  logStore = 2;
    int64  offset = 3;
    int64  sumOffset = 4;
}

message Void {}

message ProbeRequest {
    string key = 1;
    uint64 deph = 2;
}

message ProbeReply {
    string key = 1;
    int64  offset = 2;
    bytes  hash = 3;
    bytes  value = 4;
}